// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.accessmonitoringrules.v1;

import "google/protobuf/empty.proto";
import "teleport/accessmonitoringrules/v1/access_monitoring_rules.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/accessmonitoringrules/v1;accessmonitoringrulesv1";

// AccessMonitoringRulesService provides CRUD methods for Access Monitoring Rules resources.
service AccessMonitoringRulesService {
  // CreateAccessMonitoringRule creates the specified access monitoring rule.
  rpc CreateAccessMonitoringRule(CreateAccessMonitoringRuleRequest) returns (AccessMonitoringRule);

  // UpdateAccessMonitoringRule updates the specified access monitoring rule.
  rpc UpdateAccessMonitoringRule(UpdateAccessMonitoringRuleRequest) returns (AccessMonitoringRule);

  // UpsertAccessMonitoringRule upserts the specified access monitoring rule.
  rpc UpsertAccessMonitoringRule(UpsertAccessMonitoringRuleRequest) returns (AccessMonitoringRule);

  // GetAccessMonitoringRule gets the specified access monitoring rule.
  rpc GetAccessMonitoringRule(GetAccessMonitoringRuleRequest) returns (AccessMonitoringRule);

  // DeleteAccessMonitoringRule deletes the specified access monitoring rule.
  rpc DeleteAccessMonitoringRule(DeleteAccessMonitoringRuleRequest) returns (google.protobuf.Empty);

  // ListAccessMonitoringRules lists current access monitoring rules.
  rpc ListAccessMonitoringRules(ListAccessMonitoringRulesRequest) returns (ListAccessMonitoringRulesResponse);

  // ListAccessMonitoringRulesWithFilter lists current access monitoring rules that match the provided filter.
  rpc ListAccessMonitoringRulesWithFilter(ListAccessMonitoringRulesWithFilterRequest) returns (ListAccessMonitoringRulesWithFilterResponse);
}
